<resources>
    <string name="app_name">TicTacToe Ultimate</string>
    <string name="splash_screen_label">Tic Tac Toe Ultimate</string>

    <string name="button_menu_standard_game">Standard Game</string>
    <string name="button_menu_custom_game">Custom Game</string>
    <string name="button_menu_load_game">Load Game</string>
    <string name="button_menu_play_online">Play Online</string>

    <string name="button_settings_start">Start!</string>
    <string name="button_settings_add">Add</string>
    <string name="button_settings_remove">Remove</string>
    
    <string name="button_zoom_out">Zoom Out</string>
    <string name="button_next_game">Next</string>
    <string name="button_leave">Leave</string>
    <string name="button_new_opponent">New Opponent</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok" translatable="false">OK</string>

    <string name="description_how_many_in_row">* Number of figures in row needed in order to win</string>
    <string name="description_number_of_columns">** Number of game board\'s columns</string>
    <string name="description_number_of_rows">*** Number of game board\'s rows</string>
    <string name="description_number_of_deactivated_boards">**** Number of randomly chosen boards, that remain active in each round</string>

    <string name="dialog_waiting_for_decision">Waiting for a decision</string>
    <string name="dialog_lose_if_leave">If You leave right now,\nYou will lose the game!</string>

    <string name="game_message_finished_winner_suffix">&#160;won!</string>
    <string name="game_message_finished_draw">Draw!</string>
    <string name="game_message_waiting_for_opponent">Waiting for a new opponent</string>
    <string name="game_message_waiting_for_inactive_opponent">Waiting for the opponent to come back</string>
    <string name="game_message_opponent_left">Your opponent left the game, You won!</string>
    <string name="game_message_opponent_wants_join_suffix">Someone wants to join You:</string>
    <string name="game_message_waiting_for_opponent_decision">Waiting for the opponent\'s decision</string>
    <string name="game_message_opponent_wants_play_again">Your opponent wants to challenge You again!</string>
    <string name="game_message_you_out_of_time">You ran out of time!</string>

    <string name="instructions_single_empty_board">The game is played between two players (X and O) on a 3x3 grid.</string>
    <string name="instructions_single_one_figure">First player starts the turn by placing their symbol on any of nine squares.</string>
    <string name="instructions_single_two_figures">Then second player marks their symbol on one of remaining fields.</string>
    <string name="instructions_single_three_figures">Both players make their moves alternately</string>
    <string name="instructions_single_winner">To win the game player needs to place three symbols in a horizontal, vertical or diagonal row.</string>
    <string name="instructions_single_board_full">Tha game finishes either when any of player wins or when there are no more valid moves remaining.</string>

    <string name="instructions_ultimate_empty_board">In an ultimate mode main grid consists of nine 3x3 grids. To win the main game one needs to win three small grids in a row.</string>
    <string name="instructions_ultimate_one_figure">First player can move anywhere they wish.</string>
    <string name="instructions_ultimate_one_figure_corresponding_cell">The small grid next player must move in is determined by a previous player\'s move.</string>
    <string name="instructions_ultimate_two_figures">And that\'s how it goes&#8230;</string>
    <string name="instructions_ultimate_one_winner">Until one of players wins one of a small games.</string>
    <string name="instructions_ultimate_whole_board_active">When player decides to choose a cell corresponding to a small grid that\'s already out of the game (either won by somebody or full), the whole board activates for their opponent.</string>
    <string name="instructions_ultimate_game_won">Game\'s continued either until one of players wins the game&#8230;</string>
    <string name="instructions_ultimate_board_full">Or until there are no more valid moves remaining.</string>

    <string name="intent_key_exit_app" translatable="false">EXIT</string>
    <string name="intent_key_board_state" translatable="false">boardStateJson</string>
    <string name="intent_key_players" translatable="false">playersJson</string>
    <string name="intent_key_game_save_id" translatable="false">gameSaveId</string>
    <string name="intent_key_game_init_data" translatable="false">gameInitData</string>
    <string name="intent_key_is_bot_supported" translatable="false">isBotSupported</string>
    <string name="intent_key_game_online_id" translatable="false">gameOnlineId</string>

    <string name="label_single_board">Single Board</string>
    <string name="label_multi_board">Multi-Board</string>
    <string name="label_ultimate">Ultimate</string>
    <string name="label_ultimate_mode">Ultimate Mode:</string>
    <string name="label_accepted">Accepted</string>
    <string name="label_how_to_play">How to play:</string>
    <string name="label_game_mode">Game mode:</string>
    <string name="label_creator">Creator:</string>
    <string name="label_join_someone">Join someone:</string>
    <string name="label_display_name">Display name:</string>
    <string name="label_start_own_game">Start Your own game:</string>
    <string name="label_settings">Settings</string>

    <string name="message_game_save_success">Game saved successfully</string>
    <string name="message_something_went_wrong">Something went wrong</string>
    <string name="message_cant_save_online">Online game can\'t be saved</string>
    <string name="message_cant_sign_out">You can\'t sign out right now</string>
    <string name="message_nothing_to_show">Nothing to show</string>
    <string name="message_bot_not_supported">Bot\'s not supported in this mode</string>
    <string name="message_board_to_small">You\'re gonna need a bigger board!</string>
    <string name="message_signed_in">Signed in</string>
    <string name="message_signed_out">Signed out</string>
    <string name="message_signing_in_cancelled">Signing in cancelled</string>

    <string name="net_player_label_played">Played</string>
    <string name="net_player_label_won">Won</string>
    <string name="net_player_label_left">Left</string>

    <string name="player_control_label_human">HUMAN</string>
    <string name="player_control_label_bot_easy">EASY</string>
    <string name="player_control_label_bot_medium">MEDIUM</string>
    <string name="player_control_label_bot_hard">HARD</string>
    <string name="player_label">Player</string>

    <string name="preferences_language_key" translatable="false">language</string>
    <string name="preferences_language_title">Language</string>
    <string name="preferences_language_summary_english" translatable="false">English</string>
    <string name="preferences_language_summary_polish" translatable="false">Polski</string>
    <string name="preferences_language_value_english" translatable="false">english</string>
    <string name="preferences_language_value_polish" translatable="false">polish</string>

    <string name="preferences_auto_save_key" translatable="false">auto_save</string>
    <string name="preferences_auto_save_title">Auto-Save</string>
    <string name="preferences_auto_save_summary_on">On</string>
    <string name="preferences_auto_save_summary_off">Off</string>

    <string name="toolbar_menu_title_settings">Settings</string>
    <string name="toolbar_menu_title_save">Save Game</string>
    <string name="toolbar_menu_title_sign_out">Sign Out</string>
    <string name="toolbar_menu_title_exit">Exit</string>
</resources>
