<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBoard">

    <CheckBoxPreference
        android:defaultValue="@string/preferences_auto_save_summary_off"
        android:key="@string/preferences_auto_save_key"
        android:summaryOff="@string/preferences_auto_save_summary_off"
        android:summaryOn="@string/preferences_auto_save_summary_on"
        android:title="@string/preferences_auto_save_title"/>

    <ListPreference
        android:entries="@array/preferences_languages_labels"
        android:entryValues="@array/preferences_languages_values"
        android:key="@string/preferences_language_key"
        android:title="@string/preferences_language_title"/>

</PreferenceScreen>