<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main_menu.custom_game_settings.CustomGameSettingsActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/toolbar_menu_title_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="3"
        android:title="@string/toolbar_menu_title_sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="4"
        android:title="@string/toolbar_menu_title_exit"
        app:showAsAction="never"/>
</menu>