<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_background"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_lose_if_leave"
        android:lineSpacingExtra="8dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/ChalkTextMedium"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="@drawable/button_background_wood_round"
        android:textAppearance="@style/GameActionButtonTextLarge"
        android:text="@string/button_cancel"/>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/button_background_wood_round"
            android:textAppearance="@style/GameActionButtonTextLarge"
            android:text="@string/button_ok"/>
    </LinearLayout>

</LinearLayout>