<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@color/colorBoard">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:textAppearance="@style/ChalkTextLarge"
        tools:text="Anonymous"/>

    <TextView
        android:id="@+id/tv_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/ChalkTextSmall"
        tools:text="(9999, 9999, 9999)"/>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/button_decline"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_background_wood_round"
        android:textAppearance="@style/GameActionButtonTextLarge"
        android:text="@string/button_accept"/>

    <Button
        android:id="@+id/button_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_background_wood_round"
        android:textAppearance="@style/GameActionButtonTextLarge"
        android:text="@string/button_decline"/>

    <TextView
        android:id="@+id/tv_accepted"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:text="@string/label_accepted"
        android:textAppearance="@style/ChalkTextLarge"
        android:visibility="gone"/>

</RelativeLayout>