<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBoard"
    android:padding="@dimen/root_layout_padding"
    android:scrollbars="none"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBoard"
        tools:context=".main_menu.standard_game_settings.StandardGameSettingsActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_local_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rl_bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_local_players"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/ll_ultimate_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ultimate_mode"
                    android:textAppearance="@style/ChalkTextMedium" />

                <ToggleButton
                    android:id="@+id/tb_ultimate_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_switch_chalk_transparent_off"
                    android:textOff=""
                    android:textOn="" />

            </LinearLayout>

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:minHeight="0dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@drawable/button_background_wood_round"
                android:textAppearance="@style/GameActionButtonTextLarge"
                android:text="@string/button_settings_start"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_how_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_how_to_play"
            android:textAppearance="@style/ChalkTextLarge"
            android:layout_below="@id/rl_bottom_panel"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_single"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_how_to_play"
            android:layout_alignParentBottom="true"/>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_ultimate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_how_to_play"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>